force-app/main/default/objects/NotionSyncField__mdt/NotionSyncField__mdt.object-meta.xml
<CustomObject>
    <description>Field mappings between Salesforce and Notion properties</description>
    <label>Notion Sync Field</label>
    <pluralLabel>Notion Sync Fields</pluralLabel>
</CustomObject>