force-app/main/default/objects/NotionSyncField__mdt/fields/IsBodyContent__c.field-meta.xml
<CustomField>
    <fullName>IsBodyContent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Map this field to Notion page body content instead of a property</description>
    <label>Is Body Content</label>
    <type>Checkbox</type>
</CustomField>