force-app/main/default/objects/NotionSyncField__mdt/fields/NotionPropertyName__c.field-meta.xml
<CustomField>
    <fullName>NotionPropertyName__c</fullName>
    <description>Name of the Notion property</description>
    <label>Notion Property Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>