force-app/main/default/objects/NotionSyncField__mdt/fields/NotionSyncObject__c.field-meta.xml
<CustomField>
    <fullName>NotionSyncObject__c</fullName>
    <description>Parent sync object configuration</description>
    <label>Notion Sync Object</label>
    <referenceTo>NotionSyncObject__mdt</referenceTo>
    <relationshipLabel>Notion Sync Fields</relationshipLabel>
    <relationshipName>NotionSyncFields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>