force-app/main/default/objects/NotionSyncField__mdt/fields/SalesforceFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>SalesforceFieldApiName__c</fullName>
    <description>API name of the Salesforce field</description>
    <label>Salesforce Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>